ensure stuff visibility on small display

--- a/styles.css
+++ b/styles.css
@@ -407,7 +407,7 @@ body.light #languageSelect {
     body {
       display: flex;
       flex-direction: column;
-      padding-top: 30px;
+      padding-top: 50px;
     }
   
     .top-right-controls {
